@startuml

entity users {
    * id INT <<PK>>
    --
    * email VARCHAR(100) UNIQUE
    * name VARCHAR(100)
    * created_at DATE
    * updated_at DATE 
}

entity templates {
    * id INT <<PK>>
    * code VARCHAR(20) UNIQUE
    --
    * name VARCHAR(100)
    * thumbnail_path ARRAY nullabel
    * html_path ARRAY nullabel
    * css_path ARRAY nullabel
    * js_path ARRAY nullabel
    * is_publish BOOL default(false)
    * created_at DATE
    * updated_at DATE 
}

entity template_variabel {
    * id INT <<PK>>
    * foregnId templates
    --
    * name VARCHAR(100)
    * type ENUM(text, date),
    * default_value VARCHAR(100)
    * created_at DATE
    * updated_at DATE 
}

entity invitation {
    * id INT <<PK>>
    * user_id foregnId
    * template_id foregnId
    --
    * slug VARCHAR(100)
    * is_demo BOOL
    * is_publish BOOL
    * event_at DATE
    * expired_at DATE nullabel
    * created_at DATE
    * updated_at DATE 
}

entity invitation_variabel {
    * id INT <<PK>>
    * invitation_id foregnId
    --
    * name VARCHAR(100)
    * type ENUM(text, date),
    * value VARCHAR(100)
    * created_at DATE
    * updated_at DATE
}

entity rsvp {
    * id INT <<PK>>
    * invitation_id foregnId
    --
    * name VARCHAR(100)
    * status enum('presen', 'not sure', 'not presen')
    * content VARCHAR(255)
    * created_at DATE
    * updated_at DATE 
}

templates ||--o{ template_variabel  
users ||--o{  invitation
templates ||--o{ invitation 
invitation ||--o{  invitation_variabel
invitation ||--o{  rsvp

@enduml